movieclips.load(filepath=None) or value crash Blender #31856

Closed
opened 2012-06-17 23:26:17 +02:00 by CodeManX · 6 comments
Member

%%%Go to PyConsole

Type:
bpy.data.movieclips.load(filepath=None)
or a value for instance instead of None

Hit return and see Blender crashing

empty string or invalid paths get caught properly, but there doesn't seem to be a check for None / string var type

Windows 7
Blender 2.63a%%%

%%%Go to PyConsole Type: bpy.data.movieclips.load(filepath=None) or a value for instance instead of None Hit return and see Blender crashing empty string or invalid paths get caught properly, but there doesn't seem to be a check for None / string var type Windows 7 Blender 2.63a%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Output from r42804:

bpy.data.movieclips.load(filepath=None)

Traceback (most recent call last):

File "<blender_console>", line 1, in <module>

TypeError: BlendDataMovieClips.load(): error with keyword argument "filepath" - Function.filepath expected a string type, not NoneType

%%%

%%%Output from r42804: >>> bpy.data.movieclips.load(filepath=None) Traceback (most recent call last): ``` File "<blender_console>", line 1, in <module> ``` TypeError: BlendDataMovieClips.load(): error with keyword argument "filepath" - Function.filepath expected a string type, not NoneType %%%

%%%Fixed in svn rev48030. Thanks for the report, closing.%%%

%%%Fixed in svn rev48030. Thanks for the report, closing.%%%

%%%Reverted changes. Re-opening and re-assigning to Campbell for further investigation.%%%

%%%Reverted changes. Re-opening and re-assigning to Campbell for further investigation.%%%

%%%This is a bug in python, reported and attached fix for python - bugs.python.org/issue15859

applied a workaround r50373.%%%

%%%This is a bug in python, reported and attached fix for python - bugs.python.org/issue15859 applied a workaround r50373.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#31856
No description provided.