Fix #31856: movieclips.load(filepath=None) or value crash Blender

Disallow running PyUnicode_EncodeFSDefault for None type which seems
to be an issue on Windows.